jdx-bundle-builder/main/default/objects/Bundle__c/Bundle__c.object-meta.xml
<CustomObject>
    <label>Bundle</label>
    <nameField>
        <displayFormat>BUNDLE-{0000000000}</displayFormat>
        <label>Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>