jdx-bundle-builder/main/default/objects/Bundle__c/fields/Attached_File_Order__c.field-meta.xml
<CustomField>
    <fullName>Attached_File_Order__c</fullName>
    <label>Attached File Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>