jdx-bundle-builder/main/default/objects/Bundle__c/fields/Attachment_10__c.field-meta.xml
<CustomField>
    <fullName>Attachment_10__c</fullName>
    <label>Attachment 10</label>
    <length>20</length>
    <type>Text</type>
</CustomField>