jdx-bundle-builder/main/default/objects/Bundle__c/fields/Attachment_1__c.field-meta.xml
<CustomField>
    <fullName>Attachment_1__c</fullName>
    <label>Attachment 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>