jdx-bundle-builder/main/default/objects/Bundle__c/fields/Attachment_2__c.field-meta.xml
<CustomField>
    <fullName>Attachment_2__c</fullName>
    <label>Attachment 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>