jdx-bundle-builder/main/default/objects/Bundle__c/fields/Origin_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Origin_Record_Id__c</fullName>
    <description>Record Id from which the bundle was created.</description>
    <inlineHelpText>Record Id from which the bundle was created.</inlineHelpText>
    <label>Origin Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>