jdx-bundle-builder/main/default/objects/Bundle__c/fields/Recipient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone_Number__c</fullName>
    <label>Recipient Phone Number</label>
    <type>Phone</type>
</CustomField>